Fix bug with overflowing form inputs [#202]

--- a/src/core/adapter/entity/form/_sizes.scss
+++ b/src/core/adapter/entity/form/_sizes.scss
@@ -33,4 +33,6 @@
         @include -entity-form-size-full;
     }
     
+    max-width: 100%;
+    
 }
